Download button working

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     theories into practice. Special interest in developing Web and Mobile applications.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="other/Sathira-Liyanapathirana.pdf" class="main-btn" download="Sathira Liyanapathirana CV">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -67,7 +67,7 @@
                         Skills - Python | Java | PHP | CSS | JavaScript | HTML | SQL | Dart | Flutter | SpringBoot | Kotlin | Git | React | Node
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="other/Sathira-Liyanapathirana.pdf" class="main-btn" download="Sathira Liyanapathirana CV">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
