--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
                 </div>
                 <div class="blogs">
-                    <div class="blog">
+                    <div class="blog1">
                         <img src="img/Steiner.jpg" alt="Hi">
                         <div class="blog-text" >
                             <h4>
@@ -319,6 +319,20 @@
                             <p>
                                 When it comes to the 2008 Beijing Olympics, the only thing 
                                 that comes to my mind is this guy! MATTHIAS STEINER. 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog2">
+                        <img src="img/meme1.png" alt="Meme 1">
+                        <div class="blog-text" >
+                            <h4>
+                                <a href="https://sathira98.medium.com/building-centralized-log-management-system-with-graylog-c99029420dbc">
+                                    Building Centralized Log Management System with Graylog (Part-1)
+                                </a>
+                            </h4>
+                            <p>
+                                Have you ever spent hours of debugging to figure out which component
+                                 or feature in your application went wrong or broken? 
                             </p>
                         </div>
                     </div>
