--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
                 </div>
                 <div class="blogs">
-                    <div class="blog1">
+                    <div class="blog">
                         <img src="img/Steiner.jpg" alt="Hi">
                         <div class="blog-text" >
                             <h4>
@@ -322,7 +322,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="blog2">
+                    <div class="blog">
                         <img src="img/meme1.png" alt="Meme 1">
                         <div class="blog-text" >
                             <h4>
