Changed GPA, Added Blog, Updated Deccription

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
                         <br>
                         In addition to that, I worked as the Director of Membership Development Avenue of Rotaract Club 
                         of University of Moratuwa for the term of 2021-22. During our term, we've been fortunate to win 26 awards 
-                        at 32nd Rotaract District Assembly: Rotaract District 3220 (2022). Fluency in English, good analytical 
+                        at 32nd Rotaract District Assembly: Rotaract District 3220 (2022). Currently I'm working as the Director of Membership 
+                        Development Avenue of Rotaract Club of Alumni of University of Moratuwa. Also, I've been appointed as 
+                        a visiting teaching assistant of Computer Science and Engineering department of University of Moratuwa.
+                        <br>
+                        <br>
+                        Fluency in English, good analytical 
                         and organizational skills, creativity, and teamwork are just a few examples of what I can offer you. 
                         Thanks to hard work at university, the ability to learn fast, and strong motivation, I set very high 
                         standards for myself. In my spare time, I like to watch TV series and movies, play computer games and 
@@ -76,13 +81,13 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">7</p>
+                            <p class="large-text">8</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">3.599</p>
+                            <p class="large-text">3.639</p>
                             <p class="small-text">GPA</p>
                         </div>
                     </div>
@@ -165,8 +170,8 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2023 - present</p>
-                    <h5>Inern - Software Engineering<span> - CAKE Technologies</span></h5>
+                    <p class="tl-duration">2023 January- 20213 June</p>
+                    <h5>Intern - Software Engineering<span> - CAKE Technologies</span></h5>
                     <p>
                         CAKE is a Mad Mobile company which  creating groundbreaking 
                         products that are disrupting the restaurant and retail industries. 
@@ -327,12 +332,27 @@
                         <div class="blog-text" >
                             <h4>
                                 <a href="https://sathira98.medium.com/building-centralized-log-management-system-with-graylog-c99029420dbc">
-                                    Building Centralized Log Management System with Graylog (Part-1)
+                                    Building Centralized Log Management System with Graylog
                                 </a>
                             </h4>
                             <p>
                                 Have you ever spent hours of debugging to figure out which component
                                  or feature in your application went wrong or broken? 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="img/meme2.png" alt="Meme 1">
+                        <div class="blog-text" >
+                            <h4>
+                                <a href="https://medium.com/@sathira98/embracing-lifes-roller-coaster-take-it-or-leave-it-8846a33927c8">
+                                    Embracing Life’s Roller Coaster: TAKE IT OR LEAVE IT
+                                </a>
+                            </h4>
+                            <p>
+                                In our digital age, a meme can hold more truth than we might expect. 
+                                Have you ever stumbled upon the phrase “TAKE IT OR LEAVE IT” while 
+                                scrolling through your GIF messages on WhatsApp?
                             </p>
                         </div>
                     </div>
