Updated With accurate ino

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2023 January- 20213 June</p>
+                    <p class="tl-duration">2023 January- 2023 June</p>
                     <h5>Intern - Software Engineering<span> - CAKE Technologies</span></h5>
                     <p>
                         CAKE is a Mad Mobile company which  creating groundbreaking 
@@ -182,7 +182,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2009 - 2017</p>
+                    <p class="tl-duration">2004 - 2017</p>
                     <h5>Secondary and Primary Education<span> - Ananda College</span></h5>
                     <p>
                         Incepted as a result of the Sri Lankan Buddhist Renaissance which took place 
@@ -301,6 +301,22 @@
                         <div class="icons">
                             <a href="https://github.com/Nimesh55/NanoProcessorFinal" class="icon">
                                 <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/port2.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Sinhala Metaphor Search Engine</h3>
+                        <div class="icons">
+                            <a href="https://github.com/Sathira443/Sinhala_Poems_Search_Engine" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href=https://sinhala-poems-search-engine-frontend.onrender.com" class="icon">
+                                <i class="fab fa-twitter"></i>
                             </a>
                         </div>
                     </div>
