--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+                <h2>About <span>me</span><span class="bg-text">About me</span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
@@ -129,7 +129,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">javascript</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">85%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
@@ -138,7 +138,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Spring Boot</p>
                         <div class="progress-con">
-                            <p class="prog-text">55%</p>
+                            <p class="prog-text">75%</p>
                             <div class="progress">
                                 <span class="react"></span>
                             </div>
@@ -204,7 +204,7 @@
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+                <h2>My <span>Portfolio</span><span class="bg-text">My Portfolio</span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work that I've done for the last 5 Years.
@@ -378,7 +378,7 @@
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+                    <h2>Contact <span>Me</span><span class="bg-text">Contact Me</span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
