--- a/index.html
+++ b/index.html
@@ -105,6 +105,82 @@
                     </div>
                 </div>
             </div>
+            <h4 class="stat-title">My Timeline</h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2004 - 2017</p>
+                    <h5>Secondary and Primary Education<span> - Ananda College</span></h5>
+                    <p>
+                        I was fortunate to hold multiple leadership positions in my school, including 
+                        the roles of president and vice-captain of the Quiz club of Ananda College.
+                    </p>
+                </div>
+                
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2018-2019</p>
+                    <h5>Diploma in English<span> - Royal Institute of Colombo</span></h5>
+                    <p>
+                        I was able to complete the Cambridge Diploma in English offered by the 
+                        Royal Institute of Colombo, which is a 42-week program.
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2020 - Present</p>
+                    <h5>Computer Science and Engineering Degree<span> - Univeristy of Moratuwa</span></h5>
+                    <p>
+                        During the first-semester exams, I was able to rank in the top 220 in the prestigious 
+                        2019 batch of the Faculty of Engineering, University of Moratuwa. I selected the Department 
+                        of Computer Science and Engineering as my first preference during the selection process.
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2023 January - 2023 June</p>
+                    <h5>Intern - Software Engineering<span> - CAKE Technologies</span></h5>
+                    <p>
+                        CAKE is a Mad Mobile company which  creating groundbreaking 
+                        products that are disrupting the restaurant and retail industries. 
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2023 March - Present</p>
+                    <h5>Beta Ambassador<span> - Microsoft Learn Student Ambdassadors</span></h5>
+                    <p>
+                        MLSA is a global community of students who are passionate about building AI-driven 
+                        solutions with Microsoft technology.
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2023 March - Present</p>
+                    <h5>Visiting Instrcutor<span> - Computer Science and Engineering, UoM</span></h5>
+                    <p>
+                        I'm currently working as a visiting instructor in Computer Science and Engineering department, 
+                        University of Moratuwa for CS1033 Programming Fundamentals and CS2043 Operating Systems modules 
+                        offered for undergraduates of Faculty of Engineering.
+                    </p>
+                </div>
+            </div>
             <div class="about-stats">
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
@@ -164,50 +240,13 @@
                     </div>
                 </div>
             </div>
-            <h4 class="stat-title">My Timeline</h4>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2023 January- 2023 June</p>
-                    <h5>Intern - Software Engineering<span> - CAKE Technologies</span></h5>
-                    <p>
-                        CAKE is a Mad Mobile company which  creating groundbreaking 
-                        products that are disrupting the restaurant and retail industries. 
-                    </p>
-                </div>
-                
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2004 - 2017</p>
-                    <h5>Secondary and Primary Education<span> - Ananda College</span></h5>
-                    <p>
-                        Incepted as a result of the Sri Lankan Buddhist Renaissance which took place 
-                        in the late 19th century, Ananda College continues to be a premier boys' school in the country.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2019 - Present</p>
-                    <h5>Computer Science and Engineering Degree<span> - Univeristy of Moratuwa</span></h5>
-                    <p>
-                        Emboldened by the daring vision of becoming South Asia’s center of excellence in technology 
-                        and related disciplines, the University of Moratuwa prides itself in being a hub of innovation and creativity.
-                    </p>
-                </div>
-            </div>
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
                 <h2>My <span>Portfolio</span><span class="bg-text">My Portfolio</span></h2>
             </div>
             <p class="port-text">
-                Here is some of my work that I've done for the last 5 Years.
+                Here is some of my work that I've done for the last 4+ Years.
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
