NEw Details Updated and Photo updated

--- a/index.html
+++ b/index.html
@@ -17,18 +17,27 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/Orange.JPG" alt="">
+                    <img src="img/face_cropped.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>Sathira Liyanapathirana.</span>
-                     A Full-Stack Developer.
                 </h1>
                 <p>
-                    I am an enthusiastic individual with good analytical and
-                    interpersonal skills. Always seeking to gain knowledge and experience by applying the
-                    theories into practice. Special interest in developing Web and Mobile applications.
+                    Visiting Instrcutor and Final Year Computer Science and Engineering Undergraduate at University of Moratuwa, Sri Lanka. 
+                    <br>
+                    <br>
+                    Beta Ambassdor at Microsoft Learn Student Ambdassadors
+                    <br>
+                    <br>
+                    Director of Membership Development Avenue at Rotaract Club of Alumni of the University of Moratuwa
+                    <br>
+                    <br>
+                    Former Software Engineering Intern at Mad Mobile (CAKE Engineering)
+                    <br>
+                    <br>
+                    Former Director of Membership Development Avenue at Rotaract Club of the University of Moratuwa
                 </p>
                 <div class="btn-con">
                     <a href="other/Sathira-Liyanapathirana.pdf" class="main-btn" download="Sathira Liyanapathirana CV">
@@ -48,18 +57,25 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I'm a third-year Computer Science and Engineering undergraduate of University of Moratuwa and 
-                        Software Engineering Intern at CAKE Technologies. During my school time at Ananda College, Colombo, 
-                        I held several leadership positions, including president of the quiz club (2015-16). Also, I've been 
-                        part of the school quiz team and been able to win multiple inter-school and all-island quiz competitions 
-                        as well. 
+                        Welcome to my portfolio! I am a final-year undergraduate student pursuing Computer Science and Engineering 
+                        at the University of Moratuwa, Sri Lanka. My academic journey began at Ananda College, Colombo 10, where I 
+                        completed my primary and secondary schooling with outstanding achievements, securing 9As for O/Ls and 3As 
+                        for A/Ls exams. Additionally, I earned the Cambridge Diploma of English in 2019. My commitment to education 
+                        extends to my early years at Ananda College, where I engaged in an array of extracurricular activities. Notably, 
+                        I served as the President of the Quiz Club and Vice Captain of the school quiz team, showcasing my leadership and 
+                        teamwork skills. These experiences laid the foundation for my journey in academia and beyond.
                         <br>
                         <br>
-                        In addition to that, I worked as the Director of Membership Development Avenue of Rotaract Club 
-                        of University of Moratuwa for the term of 2021-22. During our term, we've been fortunate to win 26 awards 
-                        at 32nd Rotaract District Assembly: Rotaract District 3220 (2022). Currently I'm working as the Director of Membership 
-                        Development Avenue of Rotaract Club of Alumni of University of Moratuwa. Also, I've been appointed as 
-                        a visiting teaching assistant of Computer Science and Engineering department of University of Moratuwa.
+                        At the University of Moratuwa, I have consistently demonstrated academic excellence, ranking among the top 220 
+                        students in the first semester exam. Fueled by an unwavering passion for computer science, I chose the Department 
+                        of Computer Science and Engineering as my preferred field of study.
+                        <br>
+                        <br>
+                        In addition to my academic pursuits, I'm actively contributing as a visiting instructor in Python programming and 
+                        operating systems modules, sharing my knowledge and skills with aspiring minds. Beyond the classroom, I play a pivotal 
+                        role as the Director of Membership Development Avenue at the Rotaract Club of Alumni of the University of Moratuwa. 
+                        Also, I worked as Director of Membership Development Avenue at the Rotaract Club of the University of Moratuwa. (2021-22) 
+                        In that term, our collective efforts were recognized with 26 awards at the 32nd Rotaract District Assembly: Rotaract District 3220 (2022).
                         <br>
                         <br>
                         Fluency in English, good analytical 
@@ -354,7 +370,7 @@
                             <a href="https://github.com/Sathira443/Sinhala_Poems_Search_Engine" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href=https://sinhala-poems-search-engine-frontend.onrender.com" class="icon">
+                            <a href="https://sinhala-poems-search-engine-frontend.onrender.com" class="icon">
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </div>
@@ -421,7 +437,6 @@
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Contact me here</h4>
                         <div class="contact-info">
                             <div class="contact-item">
                                 <div class="icon">
@@ -435,7 +450,7 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email</span>
+                                    <span>Primary Email</span>
                                 </div>
                                 <p>
                                     <span>Liyanapathiranasathira@gmail.com</span>
@@ -443,12 +458,11 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-user-graduate"></i>
-                                    <span>Education</span>
+                                    <i class="fas fa-envelope"></i>
+                                    <span>Secondary Email</span>
                                 </div>
                                 <p>
-                                    <span>University of Moratuwa
-                                    </span>
+                                    <span>sathira.19@cse.mrt.ac.lk</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -472,6 +486,9 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
+                                <a href="www.linkedin.com/in/sathira-liyanapathirana" target="_blank">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
                                 <a href="https://www.facebook.com/sathira.liyanapathirana/" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
