--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">8</p>
+                            <p class="large-text">10+</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
@@ -109,14 +109,14 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">1+ Year</p>
-                            <p class="small-text">Open Source <br /> Experience</p>
+                            <p class="large-text">15+</p>
+                            <p class="small-text">Volunteering <br /> Contributions</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">2</p>
-                            <p class="small-text">Applications <br /> Deployed</p>
+                            <p class="large-text">29</p>
+                            <p class="small-text">Certifications <br /> Deployed</p>
                         </div>
                     </div>
                 </div>
