--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">29</p>
-                            <p class="small-text">Certifications <br /> Deployed</p>
+                            <p class="small-text">Certifications</p>
                         </div>
                     </div>
                 </div>
