Link Error COrrected

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.linkedin.com/in/sathira-liyanapathirana" target="_blank">
+                                <a href="https://www.linkedin.com/in/sathira-liyanapathirana" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                                 <a href="https://www.facebook.com/sathira.liyanapathirana/" target="_blank">
