--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Visiting Instrcutor and Final Year Computer Science and Engineering Undergraduate at University of Moratuwa, Sri Lanka. 
                     <br>
                     <br>
-                    Beta Ambassdor at Microsoft Learn Student Ambdassadors
+                    Alpha Ambassdor at Microsoft Learn Student Ambdassadors
                     <br>
                     <br>
                     Director of Membership Development Avenue at Rotaract Club of Alumni of the University of Moratuwa
