--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2023 March - Present</p>
-                    <h5>Beta Ambassador<span> - Microsoft Learn Student Ambdassadors</span></h5>
+                    <h5>Alpha Ambassador<span> - Microsoft Learn Student Ambdassadors</span></h5>
                     <p>
                         MLSA is a global community of students who are passionate about building AI-driven 
                         solutions with Microsoft technology.
