Portofolio Updated May 2024

--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
                     Hi, I'm <span>Sathira Liyanapathirana.</span>
                 </h1>
                 <p>
-                    Visiting Instrcutor and Final Year Computer Science and Engineering Undergraduate at University of Moratuwa, Sri Lanka. 
-                    <br>
-                    <br>
-                    Alpha Ambassdor at Microsoft Learn Student Ambdassadors
+                    Former Visiting Instrcutor and Final Year Computer Science and Engineering Undergraduate at University of Moratuwa, Sri Lanka. 
                     <br>
                     <br>
                     Director of Membership Development Avenue at Rotaract Club of Alumni of the University of Moratuwa
                     <br>
                     <br>
                     Former Software Engineering Intern at Mad Mobile (CAKE Engineering)
+                    <br>
+                    <br>
+                    Former Secretary at Old Anandians Engineers' Guild Student Chapter
+                    <br>
+                    <br>
+                    Former Alpha Ambassdor at Microsoft Learn Student Ambdassadors
                     <br>
                     <br>
                     Former Director of Membership Development Avenue at Rotaract Club of the University of Moratuwa
@@ -365,13 +368,39 @@
                         <img src="img/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Sinhala Metaphor Search Engine</h3>
+                        <h5>Sinhala Metaphor Search Engine</h5>
                         <div class="icons">
                             <a href="https://github.com/Sathira443/Sinhala_Poems_Search_Engine" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://sinhala-poems-search-engine-frontend.onrender.com" class="icon">
                                 <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/fyp.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h5>Ground Segmentation using the LiDAR sensor</h5>
+                        <div class="icons">
+                            <a href="https://github.com/FYP-SensorFusion/SphereFormer.git" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/lifespark-logo.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h5>Life Spark : Personal Health Monitor</h5>
+                        <div class="icons">
+                            <a href="https://github.com/FYP-SensorFusion/Background_Activity_Recognition_With_Database" class="icon">
+                                <i class="fab fa-github"></i>
                             </a>
                         </div>
                     </div>
