--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2020 - Present</p>
+                    <p class="tl-duration">2020 - 2024</p>
                     <h5>Computer Science and Engineering Degree<span> - Univeristy of Moratuwa</span></h5>
                     <p>
                         During the first-semester exams, I was able to rank in the top 220 in the prestigious 
@@ -179,7 +179,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2023 March - Present</p>
+                    <p class="tl-duration">2023 March - 2024 March</p>
                     <h5>Alpha Ambassador<span> - Microsoft Learn Student Ambdassadors</span></h5>
                     <p>
                         MLSA is a global community of students who are passionate about building AI-driven 
@@ -191,7 +191,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2023 March - Present</p>
+                    <p class="tl-duration">2023 August - 2023 December</p>
                     <h5>Visiting Instrcutor<span> - Computer Science and Engineering, UoM</span></h5>
                     <p>
                         I'm currently working as a visiting instructor in Computer Science and Engineering department, 
@@ -215,34 +215,34 @@
                     <div class="progress-bar">
                         <p class="prog-title">html5 / css3</p>
                         <div class="progress-con">
-                            <p class="prog-text">95%</p>
+                            <p class="prog-text">90%</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">javascript</p>
+                        <p class="prog-title">Node.js</p>
                         <div class="progress-con">
-                            <p class="prog-text">85%</p>
+                            <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Spring Boot</p>
+                        <p class="prog-title">React.js</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">65%</p>
                             <div class="progress">
                                 <span class="react"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">ReactJS</p>
+                        <p class="prog-title">Spring Boot</p>
                         <div class="progress-con">
-                            <p class="prog-text">60%</p>
+                            <p class="prog-text">85%</p>
                             <div class="progress">
                                 <span class="node"></span>
                             </div>
@@ -251,7 +251,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Python</p>
                         <div class="progress-con">
-                            <p class="prog-text">70%</p>
+                            <p class="prog-text">85%</p>
                             <div class="progress">
                                 <span class="python"></span>
                             </div>
